# project_2

./: CMakeLists.txt  README.md  package.xml
action/: MoveBase.action
launch/: all.launch  gazebo.launch  rviz.launch  youbot.launch
rviz/: config.rviz
scripts/: client_example_sinusoidal.py  client_example_zero.py  move_base.py  robot.py
