<?xml version="1.0"?>
<package format="2">
  <name>project_2</name>
  <version>0.0.0</version>
  <description>The project_2 package</description>


  <maintainer email="hassan@todo.todo">hassan</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend> 
  <depend>nav_msgs</depend>
  <depend>actionlib_msgs</depend>
  
  <export>
  </export>
</package>
